k8s/app/music-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-app
  template:
    metadata:
      labels:
        app: music-app
    spec:
      containers:
        - name: music-app
          image: matthew95713/music-app:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
