k8s/app/music-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-app
spec:
  selector:
    app: music-app
  ports:
    - port: 3000
      targetPort: 3000
