k8s/app/music-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-app
spec:
  ingressClassName: nginx
  rules:
    - host: music-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-app
                port:
                  number: 3000
